@@ -3,13 +3,12 @@ package ca.bc.gov.educ.api.assessment.service;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import ca.bc.gov.educ.api.assessment.model.transformer.AssessmentRequirementTransformer;
 import ca.bc.gov.educ.api.assessment.repository.AssessmentRequirementRepository;
+import lombok.AllArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import ca.bc.gov.educ.api.assessment.model.dto.Assessment;
@@ -21,24 +20,19 @@ import ca.bc.gov.educ.api.assessment.model.transformer.AssessmentTransformer;
 import ca.bc.gov.educ.api.assessment.repository.AssessmentRepository;
 
 @Service
+@AllArgsConstructor
 public class AssessmentService {
 
-    @Autowired
-    private AssessmentRepository assessmentRepo;  
+    private AssessmentRepository assessmentRepo;
 
-    @Autowired
     private AssessmentTransformer assessmentTransformer;
     
-    @Autowired
     private StudentAssessmentService studentAssessmentService;
 
-    @Autowired
     private AssessmentRequirements assessmentRequirements;
 
-    @Autowired
     private AssessmentRequirementRepository assessmentRequirementRepository;
 
-    @Autowired
     private AssessmentRequirementTransformer assessmentRequirementTransformer;
 
     private static Logger logger = LoggerFactory.getLogger(AssessmentService.class);
@@ -74,7 +68,7 @@ public class AssessmentService {
             List<String> assessmentCodes = studentAssessment.stream()
                     .map(StudentAssessment::getAssessmentCode)
                     .distinct()
-                    .collect(Collectors.toList());
+                    .toList();
             AssessmentList assessmentList = new AssessmentList();
             assessmentList.setAssessmentCodes(assessmentCodes);
 
